// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBell active with 10 notifications 1`] = `
<View
  style={
    Object {
      "width": 36,
    }
  }
>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/resources/images/tabbar/notificationsSolid.png",
        }
      }
      style={
        Array [
          Object {
            "height": 24,
            "width": 24,
          },
          Object {
            "tintColor": "red",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "justifyContent": "flex-end",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "red",
          "borderRadius": 8,
          "flex": 1,
          "justifyContent": "center",
          "paddingLeft": 6,
          "paddingRight": 6,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "white",
            "fontSize": 11,
          }
        }
      >
        10
      </Text>
    </View>
  </View>
</View>
`;

exports[`NotificationBell active with zero notifications 1`] = `
<View
  style={
    Object {
      "width": 36,
    }
  }
>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/resources/images/tabbar/notificationsSolid.png",
        }
      }
      style={
        Array [
          Object {
            "height": 24,
            "width": 24,
          },
          Object {
            "tintColor": "red",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`NotificationBell inactive with 100 notifications 1`] = `
<View
  style={
    Object {
      "width": 36,
    }
  }
>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/resources/images/tabbar/notificationsRegular.png",
        }
      }
      style={
        Array [
          Object {
            "height": 24,
            "width": 24,
          },
          Object {
            "tintColor": "red",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "justifyContent": "flex-end",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "red",
          "borderRadius": 8,
          "flex": 1,
          "justifyContent": "center",
          "paddingLeft": 6,
          "paddingRight": 6,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "white",
            "fontSize": 11,
          }
        }
      >
        99+
      </Text>
    </View>
  </View>
</View>
`;
